Can't paint texture in cycles #41141

Closed
opened 2014-07-22 10:27:31 +02:00 by S S · 7 comments

System Information
Win 7 64bit, GTX 660Ti

Blender Version
Broken: 2.71 25fab54

Short description of error
Can't paint texture in cycles after creating new image in texture paint mode.
The problem is shown in the video: cycles_paint_texture_bug.avi

Exact steps for others to reproduce the error
1, create a plane, uv unwrap it and assign a material.
2, enter texture paint mode.
3, create an image through commond, and add image texture node in material. You will find you can't paint texture.

**System Information** Win 7 64bit, GTX 660Ti **Blender Version** Broken: 2.71 25fab54 **Short description of error** Can't paint texture in cycles after creating new image in texture paint mode. The problem is shown in the video: [cycles_paint_texture_bug.avi](https://archive.blender.org/developer/F99019/cycles_paint_texture_bug.avi) **Exact steps for others to reproduce the error** 1, create a plane, uv unwrap it and assign a material. 2, enter texture paint mode. 3, create an image through commond, and add image texture node in material. You will find you can't paint texture.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @b1657022405

Added subscriber: @b1657022405
Antonis Ryakiotakis was assigned by Bastien Montagne 2014-07-22 11:50:03 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by c32a671b3a

This issue was referenced by c32a671b3a7f2908c03bcb60f46ca40250dd08fa

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c32a671b3a.

Closed by commit c32a671b3a.

Creating a new image set it as a stencil mask. If you remove it from the options you should be able to paint on the mesh again. Now I made it so creating a new image will only set the image as stencil if called from the toolbar operator.

Creating a new image set it as a stencil mask. If you remove it from the options you should be able to paint on the mesh again. Now I made it so creating a new image will only set the image as stencil if called from the toolbar operator.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41141
No description provided.